# indicators

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  README.md  clang-format.bash  conanfile.py  indicaConfig.cmake.in  indicators.pc.in  indicatorsConfig.cmake.in  single_include.json
demo/: CMakeLists.txt  Makefile  demo.cpp
include/: progressbar.hpp
include/gauge/: progressbar.hpp
include/indica/: color.hpp  progress_bar.hpp  progress_spinner.hpp
include/indicator/: color.hpp  progress_spinner.hpp  progressbar.hpp
include/indicators/: block_progress_bar.hpp  color.hpp  cursor_control.hpp  cursor_movement.hpp  display_width.hpp  dynamic_progress.hpp  font_style.hpp  indeterminate_progress_bar.hpp  multi_progress.hpp  progress_bar.hpp  progress_spinner.hpp  progress_type.hpp  progressbar.hpp  setting.hpp  termcolor.hpp  terminal_size.hpp
include/indicators/details/: stream_helper.hpp
include/progress/: bar.hpp  spinner.hpp
samples/: CMakeLists.txt  block_progress_bar.cpp  block_progress_bar_iterable.cpp  demo.cpp  dynamic_postfix_text.cpp  dynamic_progress.cpp  indeterminate_progress_bar.cpp  max_progress.cpp  multi_block_progress_bar.cpp  multi_progress.cpp  multi_progress_bar.cpp  multi_threaded_bar.cpp  multiple_bars.cpp  progress_bar_countdown.cpp  progress_bar_set_progress.cpp  progress_bar_sstream.cpp  progress_bar_tick.cpp  progress_bar_unicode.cpp  progress_spinner.cpp  single_bar.cpp  time_meter.cpp
single_include/indicators/: indicators.hpp
test/: bar  bar.cpp  multiple_bars.cpp
utils/amalgamate/: amalgamate.py  config.json
